@@ -1,3 +1,9 @@
+r8 =====================================================================
+* значение поля GradSender.DEFAULT_TICK_INTERVAL теперь соответствует
+  30 обращениям к устройству в секунду
++ в класс GradPosition добавлены новые методы set_length_from_time()
+  и compute_length()
+
 r7 =====================================================================
 * изменён класс SineGradGen:
   + теперь он может генерировать более одного канала значений
